--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -6,10 +6,10 @@
  * > 992 font sizes: body: 24px, headlines 32px, subheads: 29px, form fields: 18px, buttons: 18px, smaller-text: 14px
 **/
 
-@baseFontSize:    18px;
+@baseFontSize:    16px;
 @headlineSize:    1.25em;
 @subheadSize:     1.20em;
-@lgFontSize:      1.8em;
+@lgFontSize:      1.6em;
 @lgHeadlineSize:  1.30em;
 @lgsubheadSize:   1.20em;
 @smallerText:     0.85em;
@@ -94,6 +94,16 @@ body {
   visibility: hidden;
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
+}
+
+.save-info {
+  opacity: 0;
+   -webkit-transition: opacity 0.8s ease-in;
+  transition: opacity 0.8s ease-in;
+  position: absolute;
+  top: 2px
+  left: 0;
+  font-size: 0.90em;
 }
 
 #indexContainer {
@@ -388,7 +398,7 @@ a.btn {
 }
 .form-group {
   .help-block {
-    font-size: 16px;
+    font-size: 0.95em;
   }
   label {
     font-weight: normal;
@@ -484,7 +494,7 @@ a.btn {
   }
 }
 .tnth-form .form-group > label {
-  font-size: 18px;
+  font-size: 1em;
   color: #777;
 }
 .form-with-floats {
@@ -546,6 +556,13 @@ a.btn {
 
 }
 
+#profileForm #bdGroup div.row {
+  height: 4.5em;
+}
+#profileForm div.name-section {
+  height: 4.5em;
+}
+
 #userEthnicity label {
   margin-bottom: 0
 }
@@ -553,6 +570,15 @@ a.btn {
 #userRace label {
   margin-bottom: 0
 }
+
+#userIndigenousStatusContainer {
+  .checkbox label{
+    margin-bottom: 4px;
+  }
+  .radio label{
+    margin-bottom: 4px;
+  }
+} 
 
 #genderLabel {
   margin-bottom: 0
