populate email field at login page with request email value

--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -62,6 +62,23 @@
 {% block document_ready %}
 $("document").ready(function() {
     $("#fullSizeBox").closest("div.col-lg-12").css("padding", "0");
+    var qs = (function(a) {
+    if (a == "") return {};
+    var b = {};
+    for (var i = 0; i < a.length; ++i)
+    {
+        var p=a[i].split('=', 2);
+        if (p.length == 1)
+            b[p[0]] = "";
+        else
+            b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
+    }
+    return b;
+    })(window.location.search.substr(1).split('&'));
+
+    //console.log(qs["email"])
+
+    if (qs["email"]) $("#email").val(qs["email"]);
 });
 
 {% endblock %}
