Fix to core data capture data for procedures, currentUserId wasn't being populated

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -125,6 +125,7 @@
 
 {% block document_ready %}
     var subjectId = {{ user.id }}; 
+    var currentUserId = subjectId;
 
 $(document).ready(function(){
 
