--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -82,34 +82,6 @@ body {
   font-size: 0.90em;
 }
 
-#indexContainer {
-display: block;
-padding: 1.8em 2em;
-position: absolute;
-/*-webkit-transform: translate(-1000px, 0);
-transform(-1000px, 0);*/
-display: none;
--webkit-transform: translate(0, -200px);
-transform: (0, -200px);
-transition: all 0.5s ease;
-z-index:9;
-width:25%;
-min-width:200px;
-max-width:100%;
-border-radius: 4px;
-background-color: #9b9c95;
-color: #FFF;
-font-size: 0.85em;
--webkit-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
--moz-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
-  .open {
-  -webkit-transform: translate(0, 0);
-  transform: translate(0, 0);
-  display: block;
-  }
-}
-
 #indexNavBar {
   width: 100%;
   max-width: 100%;
@@ -120,11 +92,13 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   font-size: 0.9em;
   background-image: linear-gradient(
       to right,
-      #FFF, rgba(173, 193, 197, 0.16), #FFF, rgba(173, 193, 197, 0.16)
+      background-image: linear-gradient(
+      to right,
+      #FFF, rgba(173, 193, 197, 0.16), rgba(173, 193, 197, 0.26)
   );
   vertical-align: center;
 
-  span {
+  span.glyphicon {
     cursor: pointer;
     font-size: 1em;
     -webkit-box-shadow: 1px 1px 1px 0px #777;
@@ -136,11 +110,28 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     padding: 0.3em;
   }
 
+  span.link {
+    margin-left: 0.5em;
+    border: 1px solid #EEE;
+    padding: 0.6em;
+    border-radius: 4px;
+    color: #53583f;
+    -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
+    box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
+    cursor:pointer;
+  }
+
   #backLink {
    position: relative;
    top: -4px;
    display: inline-block;
+   a {
+    position: relative;
+    top: 1px;
+    }
   }
+
 }
 
 .orglist-download-container {
@@ -508,11 +499,11 @@ btn {
 
 .profile-item-container {
   background-color: #EFF5F3;
-  background-color: @sectionColor;
-  padding: 1.5em 2em;
+  background-color: rgba(173, 193, 197, 0.16);
+  padding: 1.5em 2.2em 2em 2.2em;
   border-radius: 8px;
   margin: 0.5em auto;
-  border: 1px solid @sectionBorderColor;
+  border: 1px solid #E0E6E3;
   overflow-y: hidden;
   overflow-x: hidden;
 }
