--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -37,6 +37,7 @@ body {
   left: 0;
   font-size: 0.90em;
 }
+
 #fullSizeBox a[href*="register"] {
   display: none;
 }
@@ -73,7 +74,7 @@ body {
 
 #indexContainer {
 display: block;
-padding: 1.8em 2em;
+padding: 2.2em;
 position: absolute;
 /*-webkit-transform: translate(-1000px, 0);
 transform(-1000px, 0);*/
@@ -105,49 +106,62 @@ display: block;
   color: #575F5C;
   border-top: 1px solid  #E0E6E3;
   border-bottom: 1px solid  #E0E6E3;
-  padding: 0.4em;
-  font-size: 0.9em;
+  padding: 0.25em;
   /*background-image: linear-gradient(
       to right,
       #FFF, rgba(173, 193, 197, 0.16), rgba(173, 193, 197, 0.26)
   );*/
-  background-image: linear-gradient( to right, #ffffff, rgba(183, 193, 195, 0.16), rgba(173, 193, 197, 0.26) );
+  /*background-image: linear-gradient( to right, #ffffff, rgba(183, 193, 195, 0.16), rgba(186, 190, 191, 0.18) );*/
+  background-image: linear-gradient( to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18) );
   vertical-align: center;
 }
 
 #indexNavBar span.glyphicon {
   cursor: pointer;
   font-size: 1em;
+  padding: 0.3em 0.8em;
   -webkit-box-shadow: 1px 1px 1px 0px #777;
   -moz-box-shadow: 1px 1px 1px 0px #777;
   box-shadow: 1px 1px 1px 0px #777;
   border-left: 1px solid #ddd;
   border-top: 1px solid #ddd;
-  border-radius: 2px;
-  padding: 0.3em;
+  border-radius: 4px;
+  position: relative;
+  top: 2px;
+  margin-left: -4px;
 }
 
 #indexNavBar span.link {
   margin-left: 0.5em;
   border: 1px solid #EEE;
-  padding: 0.6em;
+  padding: 0.5em 0.7em;
   border-radius: 4px;
   color: #53583f;
-  -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
-  -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
-  box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
+  font-size:0.90em;
+  font-weight: 500;
+  -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
+  -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
+  box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
   cursor:pointer;
+  background-color: #FFF;
+  background: linear-gradient(to top, rgba(159, 165, 167, 0.20), rgba(159, 165, 167, 0.16)));
+  max-width: 100%;
 }
+
+#indexNavBar span:hover{
+  color: #79815D;
+}
+
 
 #indexNavBar #backLink {
  position: relative;
- top: -4px;
+ top: -3.5px;
  display: inline-block;
 }
 
 #backLink a {
   position: relative;
-  top: 1px;
+  top: 0.8px;
 }
 
 .orglist-download-container {
@@ -495,6 +509,7 @@ a.btn {
 .profile-item-container {
   background-color: #EFF5F3;
   background-color: rgba(173, 193, 197, 0.16);
+  /*background-color: rgba(186, 190, 191, 0.18);*/
   padding: 1.5em 2.2em 2em 2.2em;
   border-radius: 8px;
   margin: 0.5em auto;
@@ -689,7 +704,7 @@ opacity: 0.8;
 }
 .profile-section {
   margin-bottom: 1.5em;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 .name-section {
@@ -869,7 +884,7 @@ opacity: 0.8;
   opacity: 0.4;
 }*********/
 .side {
-  height: 25em;
+  height: 26em;
 }
 .flex {
   display: flex;
@@ -1097,11 +1112,33 @@ div.input-group.date {
     font-size: 13px;
   }
 
+  #backLink a {
+  position: relative;
+  top: 0;
+  }
+
+  #indexNavBar {
+    max-width: 100%;
+  }
+
+  #indexNavBar span.link {
+    font-size: 0.85em;
+    display: inline-block;
+    width: 98%;
+    max-width: 100%;
+    margin: 0.5em auto;
+  }
+
+  #indexNavBar span.glyphicon {
+    margin-left: -2px;
+  }
+
   #wellContainer .tnth-well {
     height: 60%;
   }
   .profile-item-container {
   padding: 1em;
+  max-width: 100%;
   }
 
   .fixed-table-pagination {
@@ -1118,7 +1155,7 @@ div.input-group.date {
   }
 
   .side {
-    height: 27em;
+    height: 38em;
   }
 
   .form-control {
@@ -1224,6 +1261,17 @@ div.input-group.date {
   .form-control {
     margin-bottom: 4px;
   }
+
+  .side {
+    height: 34em;
+  }
+
+  #profileForm #bdGroup div.row {
+    height: 10em;
+  }
+  #profileForm div.name-section {
+    height: 10em;
+  }
 }
 @media (min-width: 992px) {
   /** Font sizes changes above 992 **/
@@ -1302,6 +1350,10 @@ div.input-group.date {
   .profile-img {
     display: none;
   }
+  .load-container {
+    min-height: 1.5em;
+  }
+
 }
 @media (min-width: 1200px) {
   #fullSizeContainer {
