--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -141,50 +141,60 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   color: #575F5C;
   border-top: 1px solid  #E0E6E3;
   border-bottom: 1px solid  #E0E6E3;
-  padding: 0.2em 0.4em 0.1em 0.4em;
-  font-size: 0.9em;
-  background-image: linear-gradient(
-      to right,
-      background-image: linear-gradient(
+  padding: 0.25em;
+  /*background-image: linear-gradient(
       to right,
       #FFF, rgba(173, 193, 197, 0.16), rgba(173, 193, 197, 0.26)
-  );
+  );*/
+  /*background-image: linear-gradient( to right, #ffffff, rgba(183, 193, 195, 0.16), rgba(186, 190, 191, 0.18) );*/
+  background-image: linear-gradient( to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18) );
   vertical-align: center;
 
   span.glyphicon {
     cursor: pointer;
     font-size: 1em;
+    padding: 0.3em 0.8em;
     -webkit-box-shadow: 1px 1px 1px 0px #777;
     -moz-box-shadow: 1px 1px 1px 0px #777;
     box-shadow: 1px 1px 1px 0px #777;
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
     border-radius: 2px;
-    padding: 0.3em;
+    position: relative;
+    top: 2px;
+    margin-left: -4px;
   }
 
   span.link {
-    margin-left: 0.5em;
+    margin-left: 0.3em;
     border: 1px solid #EEE;
-    padding: 0.6em;
+    padding: 0.5em;
     border-radius: 4px;
     color: #53583f;
-    -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
+    font-size:0.90em;
+    font-weight: 450;
+    -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
+    -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
+    box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
     cursor:pointer;
+    background-color: #FFF;
+    background: linear-gradient(to top, rgba(159, 165, 167, 0.20), rgba(159, 165, 167, 0.16)));
+    max-width: 100%;
+  }
+
+  #indexNavBar span:hover{
+    color: #79815D;
   }
 
   #backLink {
    position: relative;
-   top: -4px;
+   top: -3.5px;
    display: inline-block;
    a {
     position: relative;
-    top: 1px;
+    top: 0.8px;
     }
   }
-
 
 }
 
@@ -773,7 +783,7 @@ t
 }
 .profile-section {
   margin-bottom: 1.5em;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 .name-section {
@@ -954,7 +964,7 @@ t
 }*********/
 
 .side {
-  height:25em
+  height: 26em
 }
 .flex {
   display: flex;
@@ -1172,9 +1182,33 @@ div.input-group.date {
     font-size: 13px;
   }
 
+  #backLink a {
+  position: relative;
+  top: -1px;
+  }
+
+  #indexNavBar {
+    max-width: 100%;
+      span.link {
+      font-size: 0.85em;
+      display: inline-block;
+      width: 98%;
+      max-width: 100%;
+      margin: 0.5em auto;
+    }
+    span.glyphicon {
+      margin-left: -2px;
+    }
+  }
+ 
+  #wellContainer .tnth-well {
+    height: 60%;
+  }
   .profile-item-container {
   padding: 1em;
+  max-width: 100%;
   }
+
   .fixed-table-pagination {
     font-size:0.9em;
   }
@@ -1184,7 +1218,7 @@ div.input-group.date {
   }
 
   .side {
-    height: 27em;
+    height: 38em;
   }
 
   #phone, #email {
@@ -1299,6 +1333,16 @@ div.input-group.date {
   .form-control {
     margin-bottom: 4px;
   }
+
+  #profileForm #bdGroup div.row {
+    height: 10em;
+  }
+  #profileForm div.name-section {
+    height: 10em;
+  } 
+  .side {
+    height: 34em;
+  }
 }
 @media (min-width: 992px) {
 
@@ -1378,6 +1422,12 @@ div.input-group.date {
   .profile-img {
     display: none;
   }
+  #profileForm #bdGroup div.row {
+    height: 10em;
+  }
+  #profileForm div.name-section {
+    height: 10em;
+  } 
 }
 
 
