--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -82,44 +82,84 @@ body {
   font-size: 0.90em;
 }
 
+#indexContainer {
+display: block;
+padding: 1.8em 2em;
+position: absolute;
+/*-webkit-transform: translate(-1000px, 0);
+transform(-1000px, 0);*/
+display: none;
+-webkit-transform: translate(0, -200px);
+transform: (0, -200px);
+transition: all 0.5s ease;
+z-index:9;
+width:25%;
+min-width:200px;
+max-width:100%;
+border-radius: 4px;
+background-color: #9b9c95;
+color: #FFF;
+font-size: 0.85em;
+-webkit-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
+-moz-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
+box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
+  .open {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+  display: block;
+  }
+}
+
+
 #indexNavBar {
   width: 100%;
   max-width: 100%;
   color: #575F5C;
   border-top: 1px solid  #E0E6E3;
   border-bottom: 1px solid  #E0E6E3;
-  padding: 0.2em 0.4em 0.1em 0.4em;
-  font-size: 0.9em;
-  background-image: linear-gradient(
-      to right,
-      background-image: linear-gradient(
+  padding: 0.25em;
+  /*background-image: linear-gradient(
       to right,
       #FFF, rgba(173, 193, 197, 0.16), rgba(173, 193, 197, 0.26)
-  );
+  );*/
+  /*background-image: linear-gradient( to right, #ffffff, rgba(183, 193, 195, 0.16), rgba(186, 190, 191, 0.18) );*/
+  background-image: linear-gradient( to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18) );
   vertical-align: center;
 
   span.glyphicon {
     cursor: pointer;
     font-size: 1em;
+    padding: 0.3em;
     -webkit-box-shadow: 1px 1px 1px 0px #777;
     -moz-box-shadow: 1px 1px 1px 0px #777;
     box-shadow: 1px 1px 1px 0px #777;
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
     border-radius: 2px;
-    padding: 0.3em;
+    position: relative;
+    top: 3px;
+    margin-left: -8px;
   }
 
   span.link {
-    margin-left: 0.5em;
+    margin-left: 0.3em;
     border: 1px solid #EEE;
-    padding: 0.6em;
+    padding: 0.5em;
     border-radius: 4px;
     color: #53583f;
-    -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.75);
+    font-size:0.90em;
+    font-weight: 450;
+    -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
+    -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
+    box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
     cursor:pointer;
+    background-color: #FFF;
+    background: linear-gradient(to top, rgba(159, 165, 167, 0.20), #FFF, #FFF);
+    max-width: 100%;
+  }
+
+  #indexNavBar span:hover{
+    color: #79815D;
   }
 
   #backLink {
@@ -710,7 +750,7 @@ t
 }
 .profile-section {
   margin-bottom: 1.5em;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 .name-section {
@@ -891,7 +931,7 @@ t
 }*********/
 
 .side {
-  height:25em
+  height:34em
 }
 .flex {
   display: flex;
@@ -1121,8 +1161,31 @@ div.input-group.date {
     font-size: 13px;
   }
 
+  #backLink a {
+  position: relative;
+  top: -1px;
+  }
+
+  #indexNavBar {
+    max-width: 100%;
+      span.link {
+      font-size: 0.85em;
+      display: inline-block;
+      width: 98%;
+      max-width: 100%;
+      margin: 0.5em auto;
+    }
+    span.glyphicon {
+      margin-left: -2px;
+    }
+  }
+ 
+  #wellContainer .tnth-well {
+    height: 60%;
+  }
   .profile-item-container {
   padding: 1em;
+  max-width: 100%;
   }
 
   .fixed-table-pagination {
@@ -1134,9 +1197,8 @@ div.input-group.date {
   }
 
   .side {
-    height: 27em;
+    height: 34em;
   }
-
   #phone, #email {
     width: 100%;
     max-width: 100%
